// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<label
  className="sc-dTQRDE gXkQuY"
>
  <input
    checked={true}
    className="sc-eItTMj bACzZG"
    id="test-switch-1"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    checked={true}
    className="sc-vmsFN drXclV"
  />
</label>
`;

exports[`Switch renders RTL 1`] = `
<div
  dir="rtl"
>
  <label
    className="sc-dTQRDE gXkQuY"
  >
    <input
      checked={true}
      className="sc-eItTMj bACzZG"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-vmsFN drXclV"
    />
  </label>
</div>
`;

exports[`Switch renders Theme variant 1`] = `
<label
  className="sc-dTQRDE gXkQuY"
>
  <input
    checked={true}
    className="sc-eItTMj fcsBob"
    id="test-switch-1"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    checked={true}
    className="sc-vmsFN XLjQ"
  />
</label>
`;

exports[`Switch renders Theme variant with Caption 1`] = `
<div
  className="sc-hhICeM dmjLiJ"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <span
    checked={true}
    className="sc-jaIaHg sc-igYsKa bvtJA gIgJIv"
    color="bulma.100"
  >
    AM
  </span>
  <label
    className="sc-dTQRDE gXkQuY"
  >
    <input
      checked={true}
      className="sc-eItTMj fcsBob"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-vmsFN XLjQ"
    />
  </label>
  <span
    checked={false}
    className="sc-jaIaHg sc-igYsKa bvtJA jiGGRD"
    color="bulma.100"
  >
    PM
  </span>
</div>
`;

exports[`Switch renders different Sizes 1`] = `
<div
  className="flex gap-20 items-center"
>
  <label
    className="sc-dTQRDE fuSdJC"
    size="xs"
  >
    <input
      checked={true}
      className="sc-eItTMj bJooFR"
      id="test-switch-1"
      onChange={[Function]}
      size="xs"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-vmsFN drXclV"
    />
  </label>
  <label
    className="sc-dTQRDE dLuPpl"
    size="md"
  >
    <input
      checked={true}
      className="sc-eItTMj bJooFR"
      id="test-switch-2"
      onChange={[Function]}
      size="md"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-vmsFN drXclV"
    />
  </label>
  <label
    className="sc-dTQRDE ikwNAg"
    size="lg"
  >
    <input
      checked={true}
      className="sc-eItTMj bJooFR"
      id="test-switch-3"
      onChange={[Function]}
      size="lg"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-vmsFN drXclV"
    />
  </label>
</div>
`;

exports[`Switch renders with Caption 1`] = `
<div
  className="sc-hhICeM dmjLiJ"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <span
    checked={true}
    className="sc-jaIaHg sc-igYsKa bvtJA gIgJIv"
    color="bulma.100"
  >
    OFF
  </span>
  <label
    className="sc-dTQRDE gXkQuY"
  >
    <input
      checked={true}
      className="sc-eItTMj bACzZG"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-vmsFN drXclV"
    />
  </label>
  <span
    checked={false}
    className="sc-jaIaHg sc-igYsKa bvtJA jiGGRD"
    color="bulma.100"
  >
    ON
  </span>
</div>
`;
